bugfixes for different 2fa routes (DKB vs triodos)
